@@ -8,7 +8,7 @@ use Fcntl;
 use integer;
 use FileHandle;
 
-$VERSION = '5.62';
+$VERSION = '5.70';
 
 require Exporter;
 @ISA = qw(Exporter);
@@ -583,6 +583,21 @@ sub _shawrite {
 	return(_shabits  ($bitstr, $bitcnt, $self));
 }
 
+my $MWS = 16384;
+
+sub _shaWrite {
+	my($bytestr_r, $bytecnt, $self) = @_;
+	return(0) unless $bytecnt > 0;
+	return(_shawrite($$bytestr_r, $bytecnt<<3, $self)) if $bytecnt <= $MWS;
+	my $offset = 0;
+	while ($bytecnt > $MWS) {
+		_shawrite(substr($$bytestr_r, $offset, $MWS), $MWS<<3, $self);
+		$offset  += $MWS;
+		$bytecnt -= $MWS;
+	}
+	_shawrite(substr($$bytestr_r, $offset, $bytecnt), $bytecnt<<3, $self);
+}
+
 sub _shafinish {
 	my($self) = @_;
 	my $LENPOS = $self->{alg} <= 256 ? 448 : 896;
@@ -750,9 +765,9 @@ sub _hmacopen {
 	$self;
 }
 
-sub _hmacwrite {
-	my($bitstr, $bitcnt, $self) = @_;
-	_shawrite($bitstr, $bitcnt, $self->{isha});
+sub _hmacWrite {
+	my($bytestr_r, $bytecnt, $self) = @_;
+	_shaWrite($bytestr_r, $bytecnt, $self->{isha});
 }
 
 sub _hmacfinish {
@@ -777,7 +792,7 @@ for $alg (1, 224, 256, 384, 512, 512224, 512256) {
 	for $i (0 .. 2) {
 		my $fcn = 'sub sha' . $alg . $suffix_extern[$i] . ' {
 			my $state = _shaopen(' . $alg . ') or return;
-			for (@_) { _shawrite($_, length($_) << 3, $state) }
+			for (@_) { _shaWrite(\$_, length($_), $state) }
 			_shafinish($state);
 			_sha' . $suffix_intern[$i] . '($state);
 		}';
@@ -785,7 +800,7 @@ for $alg (1, 224, 256, 384, 512, 512224, 512256) {
 		push(@EXPORT_OK, 'sha' . $alg . $suffix_extern[$i]);
 		$fcn = 'sub hmac_sha' . $alg . $suffix_extern[$i] . ' {
 			my $state = _hmacopen(' . $alg . ', pop(@_)) or return;
-			for (@_) { _hmacwrite($_, length($_) << 3, $state) }
+			for (@_) { _hmacWrite(\$_, length($_), $state) }
 			_hmacfinish($state);
 			_hmac' . $suffix_intern[$i] . '($state);
 		}';
@@ -801,7 +816,7 @@ sub algorithm { my $self = shift; $self->{alg} }
 
 sub add {
 	my $self = shift;
-	for (@_) { _shawrite($_, length($_) << 3, $self) }
+	for (@_) { _shaWrite(\$_, length($_), $self) }
 	$self;
 }
 
@@ -861,6 +876,7 @@ sub add_bits {
 		$nbits = length($data);
 		$data = pack("B*", $data);
 	}
+	$nbits = length($data) * 8 if $nbits > length($data) * 8;
 	_shawrite($data, $nbits, $self);
 	return($self);
 }
@@ -892,7 +908,7 @@ sub _Addfile {
 	return(_addfile($self, $file)) unless ref(\$file) eq 'SCALAR';
 
 	$mode = defined($mode) ? $mode : "";
-	my ($binary, $portable) = map { $_ eq $mode } ("b", "p");
+	my ($binary, $portable, $BITS) = map { $_ eq $mode } ("b", "p", "0");
 
 		## Always interpret "-" to mean STDIN; otherwise use
 		## sysopen to handle full range of POSIX file names
@@ -900,8 +916,19 @@ sub _Addfile {
 	$file eq '-' and open(FH, '< -')
 		or sysopen(FH, $file, O_RDONLY)
 			or _bail('Open failed');
-	binmode(FH) if $binary || $portable;
 
+	if ($BITS) {
+		my ($n, $buf) = (0, "");
+		while (($n = read(FH, $buf, 4096))) {
+			$buf =~ s/[^01]//g;
+			$self->add_bits($buf);
+		}
+		_bail("Read failed") unless defined $n;
+		close(FH);
+		return($self);
+	}
+
+	binmode(FH) if $binary || $portable;
 	unless ($portable && -T $file) {
 		$self->_addfile(*FH);
 		close(FH);
@@ -1287,15 +1314,20 @@ argument to one of the following values:
 
 	"p"	use portable mode
 
-The "p" mode is handy since it ensures that the digest value of
-I<$filename> will be the same when computed on different operating
-systems.  It accomplishes this by internally translating all newlines in
-text files to UNIX format before calculating the digest.  Binary files
-are read in raw mode with no translation whatsoever.
+	"0"	use BITS mode
 
-For a fuller discussion of newline formats, refer to CPAN module
-L<File::LocalizeNewlines>.  Its "universal line separator" regex forms
-the basis of I<addfile>'s portable mode processing.
+The "p" mode ensures that the digest value of I<$filename> will be the
+same when computed on different operating systems.  It accomplishes
+this by internally translating all newlines in text files to UNIX format
+before calculating the digest.  Binary files are read in raw mode with
+no translation whatsoever.
+
+The BITS mode ("0") interprets the contents of I<$filename> as a logical
+stream of bits, where each ASCII '0' or '1' character represents a 0 or
+1 bit, respectively.  All other characters are ignored.  This provides
+a convenient way to calculate the digest values of partial-byte data by
+using files, rather than having to write programs using the I<add_bits>
+method.
 
 =item B<dump($filename)>
 
@@ -1445,6 +1477,7 @@ The author is particularly grateful to
 	Chris Carey
 	Alexandr Ciornii
 	Jim Doble
+	Thomas Drugeon
 	Julius Duque
 	Jeffrey Friedl
 	Robert Gilmour
